<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/bt_line_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/line_chart" />

    <Button
        android:id="@+id/bt_bar_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bar_chart" />

    <Button
        android:id="@+id/bt_pie_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bie_chart" />

</LinearLayout>
