<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="12dp"
    android:layout_marginTop="12dp"
    android:background="@drawable/bg_dynamic_set"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/dialog_title_layout"
        android:layout_width="match_parent"
        android:layout_height="36dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/dialog_title"
            android:textColor="#000000"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="6dp"
                android:text="@string/_2011" />

            <TextView
                style="@style/CustomTextView"
                android:text="@string/boy"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_11_boy"
                style="@style/CustomEditText"
                android:hint="@string/input_data" />

            <TextView
                style="@style/CustomTextView"
                android:layout_marginStart="24dp"
                android:text="@string/girl"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_11_girl"
                style="@style/CustomEditText"
                android:hint="@string/input_data" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="6dp"
                android:text="@string/_2012" />

            <TextView
                style="@style/CustomTextView"
                android:text="@string/boy"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_12_boy"
                style="@style/CustomEditText"
                android:hint="@string/input_data" />

            <TextView
                style="@style/CustomTextView"
                android:layout_marginStart="24dp"
                android:text="@string/girl"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_12_girl"
                style="@style/CustomEditText"
                android:hint="@string/input_data" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="6dp"
                android:text="@string/_2013" />

            <TextView
                style="@style/CustomTextView"
                android:text="@string/boy"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_13_boy"
                style="@style/CustomEditText"
                android:hint="@string/input_data" />

            <TextView
                style="@style/CustomTextView"
                android:layout_marginStart="24dp"
                android:text="@string/girl"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_13_girl"
                style="@style/CustomEditText"
                android:hint="@string/input_data" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="6dp"
                android:text="@string/_2014" />

            <TextView
                style="@style/CustomTextView"
                android:text="@string/boy"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_14_boy"
                style="@style/CustomEditText"
                android:hint="@string/input_data" />

            <TextView
                style="@style/CustomTextView"
                android:layout_marginStart="24dp"
                android:text="@string/girl"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_14_girl"
                style="@style/CustomEditText"
                android:hint="@string/input_data" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="6dp"
                android:text="@string/_2015" />

            <TextView
                style="@style/CustomTextView"
                android:text="@string/boy"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_15_boy"
                style="@style/CustomEditText"
                android:hint="@string/input_data" />

            <TextView
                style="@style/CustomTextView"
                android:layout_marginStart="24dp"
                android:text="@string/girl"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_15_girl"
                style="@style/CustomEditText"
                android:hint="@string/input_data" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="6dp"
                android:text="@string/_2016" />

            <TextView
                style="@style/CustomTextView"
                android:text="@string/boy"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_16_boy"
                style="@style/CustomEditText"
                android:hint="@string/input_data" />

            <TextView
                style="@style/CustomTextView"
                android:layout_marginStart="24dp"
                android:text="@string/girl"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_16_girl"
                style="@style/CustomEditText"
                android:hint="@string/input_data" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="6dp"
                android:text="@string/_2017" />

            <TextView
                style="@style/CustomTextView"
                android:text="@string/boy"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_17_boy"
                style="@style/CustomEditText"
                android:hint="@string/input_data" />

            <TextView
                style="@style/CustomTextView"
                android:layout_marginStart="24dp"
                android:text="@string/girl"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_17_girl"
                style="@style/CustomEditText"
                android:hint="@string/input_data" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="6dp"
                android:text="@string/_2018" />

            <TextView
                style="@style/CustomTextView"
                android:text="@string/boy"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_18_boy"
                style="@style/CustomEditText"
                android:hint="@string/input_data" />

            <TextView
                style="@style/CustomTextView"
                android:layout_marginStart="24dp"
                android:text="@string/girl"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_18_girl"
                style="@style/CustomEditText"
                android:hint="@string/input_data" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/dialog_horizontal_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="#EDEDEF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialog_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textColor="#9B9DB1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dialog_vertical_divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EDEDEF" />

        <TextView
            android:id="@+id/dialog_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/ok"
            android:textColor="#DE0000"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>
